finish material type

--- a/Components/Pages/MaterialType.razor
+++ b/Components/Pages/MaterialType.razor
@@ -17,7 +17,7 @@
     protected override void OnInitialized()
     {
         base.OnInitialized();
-        _materialTypes = MaterialTypeApplication.ListAllType();
+        _materialTypes = MaterialTypeApplication.ListAllRootType();
     }
 
     private bool _editOpen = false;
